modal-readMe preparation

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,8 @@
 
     <include src="./partials/modal-buy-now.html"></include>
 
+    <include src="./partials/modal-readMe.html"></include>
+
     <include src="./partials/modal-map.html"></include>
 
     <include src="./partials/modal-products.html"></include>
@@ -62,6 +64,8 @@
 
     <!------ modal-windows --------->
     <script src="./js/modal.js"></script>
+
+    <script src="./js/modal-readMe.js"></script>
 
     <script src="./js/modal-buy-now.js"></script>
 
