--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
       <include src="./partials/reviews.html"></include>
 
       <include src="./partials/contacts.html"></include>
+
+      <include src="./partials/scroll-up.html"></include>
     </main>
 
     <include src="./partials/footer.html"></include>
