--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
     ></script>
     <script defer src="./js/mobile-menu.js"></script>
 
-    <!-- <script src="./js/modal-buy-now.js"></script> -->
+    <script src="./js/scroll-up.js"></script>
 
     <!------ modal-windows --------->
     <script src="./js/modal.js"></script>
